Translate notification settings for level

--- a/static/locales/fr.json
+++ b/static/locales/fr.json
@@ -86,6 +86,8 @@
   "Total Gym CP":"CP total de l'arène",
   "Last Scanned":"Dernier scan",
   "Free Slots":"Places disponibles",
+  "Minimum level":"Niveau minimum",
+  "Notify of Level":"Notification sur le niveau",
   "Abomasnow": "Blizzaroi",
   "Abra": "Abra",
   "Absol": "Absol",
