Adding some translations

--- a/static/locales/fr.json
+++ b/static/locales/fr.json
@@ -97,6 +97,28 @@
   "Minimum level":"Niveau minimum",
   "Notify of Level":"Notification sur le niveau",
   "Please zoom in to get data.":"Veuillez zoomer pour afficher les pokémons, arènes etc.",
+  "Select Pokémon":"Selectionnez un pokémon",
+  "Options":"Options",
+  "Pokémon markers are disabled":"Les pokéstops sont désactivés dans vos options",
+  "Gyms markers are disabled":"Les arènes sont désactivées dans vos options",
+  "PokéStops markers are disabled":"Les pokéstops sont désactivées dans vos options",
+  "Team Color":"Couleur d'équipe",
+  "Blue":"Bleue",
+  "Red":"Rouge",
+  "Yellow":"Jaune",
+  "Clear":"Aucune",
+  "Icon":"Icone",
+  "Status":"Statut",
+  "Not Lured":"Non leurré",
+  "Lured":"Leurré",
+  "Weather Bonus":"Bonus Météo",
+  "Clear":"Ensoleillé",
+  "Rainy":"Pluvieux",
+  "Partly cloudy":"Quelques nuages",
+  "Overcast":"Couvert",
+  "Windy":"Venteux",
+  "Snow":"Neigeux",
+  "Fog":"Brumeux",
   "Abomasnow": "Blizzaroi",
   "Abra": "Abra",
   "Absol": "Absol",
